--- a/web/src/app/components/rbac/policy-form/rbac-policy-form.component.html
+++ b/web/src/app/components/rbac/policy-form/rbac-policy-form.component.html
@@ -1,33 +1,35 @@
 <ng-container [formGroup]="form">
   <mat-horizontal-stepper formArrayName="steps" linear [disableRipple]="true" [@.disabled]="true">
-    <mat-step *ngIf="step(0) as step1" formGroupName="0" [stepControl]="step1">
-      <ng-template matStepLabel>Step 1</ng-template>
-      <app-rbac-policy-form-step-one
-        [form]="step1"
-        (roleChanged)="step(1).get('object').reset(initialObject)"
-      ></app-rbac-policy-form-step-one>
-      <div class="controls">
-        <button [disabled]="step1.invalid" mat-raised-button matStepperNext color="accent">Next</button>
-      </div>
-    </mat-step>
-    <mat-step *ngIf="step(1) as step2" formGroupName="1" [stepControl]="step2" label="Step 2">
-      <app-rbac-policy-form-step-two [form]="step2"></app-rbac-policy-form-step-two>
-      <div class="controls">
-        <button mat-button matStepperPrevious>Back</button>
-        <button mat-raised-button matStepperNext color="accent">Next</button>
-      </div>
-    </mat-step>
-    <mat-step>
-      <ng-template matStepLabel>Done</ng-template>
-      <app-rbac-policy-form-step-three [form]="form"></app-rbac-policy-form-step-three>
-      <div class="controls">
-        <button mat-button matStepperPrevious>Back</button>
-        <button mat-raised-button color="primary" (click)="onCancel()">Cancel</button>
-        <button mat-raised-button [disabled]="!form.valid" color="accent" (click)="save()"
-                (focus)="(!!form.valid)">Create
-        </button>
-      </div>
-    </mat-step>
+    <ng-container *ngIf="step(0) && step(1)">
+      <mat-step formGroupName="0" [stepControl]="step(0)">
+        <ng-template matStepLabel>Step 1</ng-template>
+        <app-rbac-policy-form-step-one
+          [form]="step(0)"
+          (roleChanged)="step2Component.reset(initialObject)"
+        ></app-rbac-policy-form-step-one>
+        <div class="controls">
+          <button [disabled]="step(0).invalid" mat-raised-button matStepperNext color="accent">Next</button>
+        </div>
+      </mat-step>
+      <mat-step formGroupName="1" [stepControl]="step(1)" label="Step 2">
+        <app-rbac-policy-form-step-two #step2Component [form]="step(1)"></app-rbac-policy-form-step-two>
+        <div class="controls">
+          <button mat-button matStepperPrevious>Back</button>
+          <button mat-raised-button matStepperNext color="accent">Next</button>
+        </div>
+      </mat-step>
+      <mat-step>
+        <ng-template matStepLabel>Done</ng-template>
+        <app-rbac-policy-form-step-three [form]="form"></app-rbac-policy-form-step-three>
+        <div class="controls">
+          <button mat-button matStepperPrevious>Back</button>
+          <button mat-raised-button color="primary" (click)="onCancel()">Cancel</button>
+          <button mat-raised-button [disabled]="!form.valid" color="accent" (click)="save()"
+                  (focus)="(!!form.valid)">Create
+          </button>
+        </div>
+      </mat-step>
+    </ng-container>
   </mat-horizontal-stepper>
 </ng-container>
 
