ADCM-2605 Filter work in create policy popup only by full match

--- a/web/src/app/components/rbac/policy-form/rbac-policy-form-step-one/rbac-policy-form-step-one.component.html
+++ b/web/src/app/components/rbac/policy-form/rbac-policy-form-step-one/rbac-policy-form-step-one.component.html
@@ -14,7 +14,7 @@
                                [(ngModel)]="roleFilter">
         </ngx-mat-select-search>
       </mat-option>
-      <ng-container [rbac-roles-as-options]="{name: roleFilter, type: 'role'}" #roles="rbacRoles">
+      <ng-container [rbac-roles-as-options]="{search: roleFilter, type: 'role'}" #roles="rbacRoles">
         <mat-option
           *ngFor="let role of roles.options$ | async | falseAsEmptyArray | adwpFilter:matcher:roleFilter:roles.label"
           [value]="role">
