--- a/web/src/app/components/maintenance-mode-button/maintenance-mode-button.component.html
+++ b/web/src/app/components/maintenance-mode-button/maintenance-mode-button.component.html
@@ -1,9 +1,10 @@
-<button
-  mat-icon-button
-  color="{{status?.color}}"
-  [matTooltip]="status?.tooltip"
-  [disabled]="!status?.isModeActive"
-  (click)="clickCell($event, row)"
->
-<mat-icon>medical_services</mat-icon>
-</button>
+<div [matTooltip]="status?.tooltip">
+  <button
+    mat-icon-button
+    color="{{status?.color}}"
+    [disabled]="!status?.isModeActive"
+    (click)="clickCell($event, row)"
+  >
+  <mat-icon>medical_services</mat-icon>
+  </button>
+</div>
