--- a/web/src/app/shared/configuration/group-fields/group-fields.component.html
+++ b/web/src/app/shared/configuration/group-fields/group-fields.component.html
@@ -1,6 +1,11 @@
 <mat-expansion-panel [expanded]="active" [disabled]="!active" [ngClass]="{ panel: true, advanced: isAdvanced }" #ep>
   <mat-expansion-panel-header>
     <mat-panel-title class="title">
+      <mat-checkbox
+        *ngIf="panel.type==='group'"
+        [ngModel]="panel.group_config.checkboxValue"
+        [disabled]="panel.group_config.disabled"
+        (click)="$event.stopPropagation();"></mat-checkbox>
       <span>{{ panel.display_name }}</span>
       <mat-slide-toggle *ngIf="panel.activatable" [checked]="active" (change)="activeToggle($event)">
       </mat-slide-toggle>
