--- a/web/src/app/components/maintenance-mode-button/maintenance-mode-button.component.html
+++ b/web/src/app/components/maintenance-mode-button/maintenance-mode-button.component.html
@@ -1,6 +1,7 @@
 <div [matTooltip]="status?.tooltip">
   <button
     mat-icon-button
+    class="mm-button"
     color="{{status?.color}}"
     [disabled]="!status?.isModeActive"
     (click)="clickCell($event, row)"
