ADCM-2780 - logic fix

--- a/web/src/app/shared/host-components-map/services2hosts/service-host.component.html
+++ b/web/src/app/shared/host-components-map/services2hosts/service-host.component.html
@@ -23,8 +23,8 @@
       <div *ngIf="!Hosts?.length">
         Add hosts on the <a [routerLink]="['/cluster', cluster?.id, 'host']">hosts page.</a>
       </div>
-      <app-much-2-many *ngFor="let host of Hosts" [model]="host" [form]="form" (clickToTitleEvt)="selectHost($event)"
-        (clearRelationEvt)="clearServiceFromHost($event)">
+      <app-much-2-many *ngFor="let host of Hosts" [model]="host" [form]="form" [actionParameters]="actionParameters"
+        (clickToTitleEvt)="selectHost($event)" (clearRelationEvt)="clearServiceFromHost($event)">
       </app-much-2-many>
     </div>
   </div>
