--- a/web/src/app/shared/configuration/group-fields/group-fields.component.html
+++ b/web/src/app/shared/configuration/group-fields/group-fields.component.html
@@ -9,7 +9,11 @@
         [checked]="group_config?.checkboxValue"
         (click)="clickGroupCheckbox($event)"></mat-checkbox>
       <span>{{ panel.display_name }}</span>
-      <mat-slide-toggle *ngIf="panel.activatable" [disabled]="groupCheckboxExist() && !group_config?.checkboxValue" [checked]="active" (change)="activeToggle($event)">
+      <mat-slide-toggle
+        *ngIf="panel.activatable"
+        [disabled]="groupCheckboxExist() && !group_config?.checkboxValue"
+        [checked]="active"
+        (change)="activeToggle($event)">
       </mat-slide-toggle>
     </mat-panel-title>
     <mat-panel-description>
