ADCM-2746 - final group checkbox & switch fix

--- a/web/src/app/shared/configuration/group-fields/group-fields.component.html
+++ b/web/src/app/shared/configuration/group-fields/group-fields.component.html
@@ -1,5 +1,5 @@
-<!--group_config?.disabled - Если true, групповой чекбокс disabled-->
-<!--group_config?.checkboxValue - Если false, групповой чекбокс не checked, а свитчер disabled и наоборот-->
+<!--group_config?.disabled - if true, group checkbox is disabled-->
+<!--group_config?.checkboxValue - if false, group checkbox is not checked, and switcher is disabled and vice versa-->
 <mat-expansion-panel [expanded]="active" [disabled]="!active" [ngClass]="{ panel: true, advanced: isAdvanced }" #ep>
   <mat-expansion-panel-header>
     <mat-panel-title class="title">
