ADCM-2856 - Possibility to include config field in group-config with `config_group_customization=False` with `advanced: true` and not only

--- a/web/src/app/shared/configuration/group-fields/group-fields.component.html
+++ b/web/src/app/shared/configuration/group-fields/group-fields.component.html
@@ -7,7 +7,7 @@
         *ngIf="groupCheckboxExist()"
         [disabled]="group_config?.disabled"
         [checked]="group_config?.checkboxValue"
-        (click)="clickGroupCheckbox($event)"></mat-checkbox>
+        (click)="!group_config?.disabled && clickGroupCheckbox($event)"></mat-checkbox>
       <span>{{ panel.display_name }}</span>
       <mat-slide-toggle
         *ngIf="panel.activatable"
