--- a/web/src/app/shared/components/upgrades/master/master.component.html
+++ b/web/src/app/shared/components/upgrades/master/master.component.html
@@ -1,12 +1,12 @@
-<ng-container *ngIf="model?.actions.length === 0">
-  <p>No data for the action!</p>
+<ng-container *ngIf="model?.upgrades.length === 0">
+  <p>No data for the upgrades!</p>
 </ng-container>
 
-<ng-container *ngIf="!action; else simple">
+<ng-container *ngIf="!upgrade; else simple">
   <i>Let's choose first</i>
   <mat-action-list>
-    <button class="action-button warn" color="primary" mat-list-item *ngFor="let action of model.actions"
-      (click)="choose(action)">{{ action.display_name }}</button>
+    <button class="action-button warn" color="primary" mat-list-item *ngFor="let upgrade of model.upgrades"
+      (click)="choose(upgrade)">{{ upgrade.name }}</button>
   </mat-action-list>
   <p><button mat-raised-button (click)="cancel()" color="primary">Cancel</button></p>
 </ng-container>
@@ -17,20 +17,20 @@
   </div>
 
   <div *ngIf="show === 'config'">
-    <app-action-master-config [action]="action" #wc></app-action-master-config>
+    <app-upgrade-master-config [upgrade]="upgrade" #wc></app-upgrade-master-config>
     <ng-container *ngTemplateOutlet="controls; context: { value: { config: wc.fields } }"></ng-container>
   </div>
 
   <div *ngIf="show === 'hostmap'">
     <app-service-host [tabIndex]="2" [cluster]="model.cluster" [hideButton]="true" #hostmap
-      [actionParameters]="action.hostcomponentmap" [fixedButton]="false"></app-service-host>
+      [actionParameters]="upgrade.hostcomponentmap" [fixedButton]="false"></app-service-host>
     <ng-container *ngTemplateOutlet="controls; context: { value: { hostmap: hostmap } }"></ng-container>
   </div>
 
   <mat-horizontal-stepper #stepper linear *ngIf="show === 'stepper'">
     <mat-step [stepControl]="wcs.fields.form">
       <ng-template matStepLabel>Configuration</ng-template>
-      <app-action-master-config [action]="action" #wcs></app-action-master-config>
+      <app-upgrade-master-config [upgrade]="upgrade" #wcs></app-upgrade-master-config>
       <div class="controls">
         <button mat-raised-button (click)="cancel()" color="primary">Cancel</button>
         <button mat-raised-button matStepperNext color="primary">Next</button>
@@ -39,7 +39,7 @@
     <mat-step>
       <ng-template matStepLabel>Host Components</ng-template>
       <app-service-host [tabIndex]="2" [cluster]="model.cluster" #hms [hideButton]="true"
-        [actionParameters]="action.hostcomponentmap" [fixedButton]="false"></app-service-host>
+        [actionParameters]="upgrade.hostcomponentmap" [fixedButton]="false"></app-service-host>
       <ng-container *ngTemplateOutlet="controls; context: { value: { config: wcs.fields, hostmap: hms } }">
       </ng-container>
     </mat-step>
@@ -54,8 +54,8 @@
     <mat-checkbox [(ngModel)]="verbose">Verbose</mat-checkbox>
 
     <div class="controls">
-      <ng-container *ngIf="model.actions.length > 1">
-        <button mat-raised-button color="primary" (click)="action = null">Back</button>
+      <ng-container *ngIf="model['upgradable']">
+        <button mat-raised-button color="primary" (click)="upgrade = null">Back</button>
         <span [style.flex]="1"></span>
       </ng-container>
 
