--- a/web/src/app/shared/configuration/group-fields/group-fields.component.html
+++ b/web/src/app/shared/configuration/group-fields/group-fields.component.html
@@ -17,9 +17,8 @@
       </mat-slide-toggle>
     </mat-panel-title>
     <mat-panel-description>
-      <mat-icon *ngIf="panel.description" matSuffix [appTooltip]="panel.description">
-        info_outline
-      </mat-icon>
+      <mat-icon *ngIf="panel.description" style="vertical-align: middle;" [ngClass]="'info-icon'"
+                matTooltipClass="info-tooltip" [matTooltip]="panel.description">info_outline</mat-icon>
     </mat-panel-description>
   </mat-expansion-panel-header>
   <app-config-fields class="in-group" [dataOptions]="panel.options" [form]="form"></app-config-fields>
