ADCM-2930 - [UI] Prohibit ability to change some user info on User tab

--- a/web/src/app/components/rbac/user-form/rbac-user-form.component.html
+++ b/web/src/app/components/rbac/user-form/rbac-user-form.component.html
@@ -18,6 +18,7 @@
                      #groups="rbacGroups"
                      [handler]="groups.label"
                      [rbac-groups-as-options]="filter"
+                     [selectRowDisableCheck]="isDisabled"
                      [options]="groups.options$ | async | falseAsEmptyArray"
                      (filter)="updateFilter('search', $event)"
 
