--- a/web/src/app/shared/components/upgrades/master/master.component.html
+++ b/web/src/app/shared/components/upgrades/master/master.component.html
@@ -60,9 +60,7 @@
       </ng-container>
 
       <button mat-raised-button (click)="cancel()" color="primary" tabindex="-1">Cancel</button>
-      <button mat-raised-button #runBtn (click)="run(value)" color="accent" [disabled]="isDisabled(value)" tabindex="1">
-        Run
-      </button>
+      <button mat-raised-button #runBtn (click)="run(value)" color="accent" [disabled]="isDisabled(value)" tabindex="1">Run</button>
     </div>
 
   </div>
