--- a/web/src/app/shared/components/upgrades/master/master.component.html
+++ b/web/src/app/shared/components/upgrades/master/master.component.html
@@ -1,4 +1,4 @@
-<ng-container *ngIf="model?.upgrades.length === 0">
+<ng-container *ngIf="model?.upgrades?.length === 0">
   <p>No data for the upgrades!</p>
 </ng-container>
 
