--- a/web/src/app/shared/components/upgrades/master/master.component.html
+++ b/web/src/app/shared/components/upgrades/master/master.component.html
@@ -31,9 +31,12 @@
     <mat-step [stepControl]="wcs.fields.form">
       <ng-template matStepLabel>Configuration</ng-template>
       <app-upgrade-master-config [upgrade]="upgrade" #wcs></app-upgrade-master-config>
-      <div class="controls">
-        <button mat-raised-button (click)="cancel()" color="primary">Cancel</button>
-        <button mat-raised-button matStepperNext color="primary">Next</button>
+      <div class="controls-container" [class.margin]="needMargin()">
+        <mat-checkbox [(ngModel)]="verbose">Verbose</mat-checkbox>
+        <div class="controls">
+          <button mat-raised-button (click)="cancel()" color="primary">Cancel</button>
+          <button mat-raised-button matStepperNext color="primary">Next</button>
+        </div>
       </div>
     </mat-step>
     <mat-step>
