--- a/web/src/app/components/rbac/group-form/rbac-group-form.component.html
+++ b/web/src/app/components/rbac/group-form/rbac-group-form.component.html
@@ -5,6 +5,7 @@
                      #users="rbacUsers"
                      [handler]="users.label"
                      [rbac-users-as-options]="filter"
+                     [selectRowDisableCheck]="isDisabled"
                      [options]="users.options$ | async | falseAsEmptyArray"
                      (filter)="updateFilter('search', $event)"
   ></adwp-input-select>
