ADCM-2921 - Margin fix

--- a/web/src/app/shared/components/actions/master/master.component.html
+++ b/web/src/app/shared/components/actions/master/master.component.html
@@ -55,7 +55,7 @@
 </ng-template>
 
 <ng-template #controls let-value="value" let-step="step">
-  <div class="controls-container">
+  <div class="controls-container" [class.margin]="needMargin() || step">
 
     <mat-checkbox [(ngModel)]="verbose">Verbose</mat-checkbox>
 
