--- a/web/src/app/shared/components/actions/master/master.component.scss
+++ b/web/src/app/shared/components/actions/master/master.component.scss
@@ -11,4 +11,8 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+
+  &.margin {
+    margin-top: 26px !important;
+  }
 }
