--- a/web/src/app/shared/components/actions/master/master.component.scss
+++ b/web/src/app/shared/components/actions/master/master.component.scss
@@ -7,6 +7,13 @@
   }
 }
 
+.controls {
+
+  &.margin {
+    margin-top: 26px !important;
+  }
+}
+
 .controls-container {
   display: flex;
   justify-content: space-between;
