ADCM-2921 - next button status fix

--- a/web/src/app/shared/components/actions/master/master.component.html
+++ b/web/src/app/shared/components/actions/master/master.component.html
@@ -33,7 +33,7 @@
       <app-action-master-config [action]="action" #wcs></app-action-master-config>
       <div class="controls margin">
         <button mat-raised-button (click)="cancel()" color="primary">Cancel</button>
-        <button mat-raised-button matStepperNext color="primary">Next</button>
+        <button mat-raised-button matStepperNext color="primary" [disabled]="configStepValid(wcs.fields)">Next</button>
       </div>
     </mat-step>
     <mat-step>
@@ -43,7 +43,7 @@
       <div class="controls">
         <button mat-raised-button matStepperPrevious >Back</button>
         <button mat-raised-button (click)="cancel()" color="primary">Cancel</button>
-        <button mat-raised-button matStepperNext color="primary">Next</button>
+        <button mat-raised-button matStepperNext color="primary" [disabled]="hmStepValid(hms)">Next</button>
       </div>
     </mat-step>
     <mat-step label="Done">
