--- a/web/src/app/shared/components/actions/master/master.component.scss
+++ b/web/src/app/shared/components/actions/master/master.component.scss
@@ -1,3 +1,7 @@
+:host ::ng-deep .mat-horizontal-content-container {
+  height: 400px !important;
+}
+
 .action-button {
   background: none !important;
   margin: 6px 0;
