ADCM-2944 - base filter

--- a/web/src/app/admin/users/users.component.html
+++ b/web/src/app/admin/users/users.component.html
@@ -8,6 +8,8 @@
   </button>
 </div>
 
+<app-filter [filterList]="userFilters"></app-filter>
+
 <adwp-list
   [columns]="listColumns"
   [dataSource]="data$ | async"
