ADCM-2944 - filter fix

--- a/web/src/app/admin/users/users.component.html
+++ b/web/src/app/admin/users/users.component.html
@@ -8,7 +8,7 @@
   </button>
 </div>
 
-<app-filter [filterList]="userFilters"></app-filter>
+<app-filter [filterList]="userFilters" [data]="data$"></app-filter>
 
 <adwp-list
   [columns]="listColumns"
