--- a/web/src/app/components/rbac/user-form/rbac-user-form.component.html
+++ b/web/src/app/components/rbac/user-form/rbac-user-form.component.html
@@ -3,10 +3,10 @@
   <div class="rbac-user-form__password">
     <adwp-input [form]="userForm"
                 label='Password' controlName='password' type="password"
-                (focusin)="clearPasswordControlIfFocusIn()"></adwp-input>
+                (focusin)="clearPasswordControlIfFocusIn()" [hidden]="!value.is_active"></adwp-input>
     <adwp-input [form]="confirmForm"
                 label='Confirm password' controlName='password' type="password"
-                (focusin)="clearPasswordControlIfFocusIn()"></adwp-input>
+                (focusin)="clearPasswordControlIfFocusIn()" [hidden]="!value.is_active"></adwp-input>
   </div>
   <div class="row" [formGroup]="userForm">
     <mat-checkbox formControlName="is_superuser">ADCM Administrator</mat-checkbox>
@@ -24,5 +24,5 @@
 
   ></adwp-input-select>
   <adwp-controls [title]="title" [disabled]="form.invalid || form.pristine" (cancel)="onCancel()"
-                 (save)="save()"></adwp-controls>
+                 (save)="save()" [hiddenSaveButton]="!value.is_active"></adwp-controls>
 </form>
