--- a/web/src/app/admin/users/users.component.html
+++ b/web/src/app/admin/users/users.component.html
@@ -14,7 +14,7 @@
   [paging]="paging | async"
   [sort]="sorting | async"
   [defaultSort]="defaultSort"
-  [isRowActiveHandler]="isRowActive"
+  [isRowInactiveHandler]="isRowInactive"
   (clickRow)="clickRow($event)"
   (auxclickRow)="auxclickRow($event)"
   (changePaging)="onChangePaging($event)"
